vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc

  tags = {
    name = "main-vpc"
  }
}
